package ro.uaic.info.engine.sprite;

public enum AssetList {
    PH_SHIP_1,
    PH_SHIP_2,
    PH_SHIP_3,

    PH_PROJECTILE_1,
    PH_PROJECTILE_2,

    PH_POWER_UP_1,

    UNKNOWN
}
